# GameEngine

./: .gitignore  CMakeLists.txt  main.cpp
assets/data/: scene.json  scene2.json
assets/models/: 66-scifi-cartoon-rocket-obj.rar
assets/models/BrokenEgg/: Shys Spiegelei2.dae  ShysSpiegeleil2.mtl
assets/models/background/: galaxy.mtl
assets/models/bullet/: 556-rifle-bullet.mtl
assets/models/chicken/: chicken.mtl
assets/models/crackedegg/: easter-egg.mtl
assets/models/heart/: heart_by_gustavo_belemmi.mtl  uploads_files_2036667_LP_heart_OBJ.mtl
assets/models/lasers/: lasers.mtl
assets/shaders/Face/: face3.frag  face3.vert
assets/shaders/ForTesting/: quad.vert
assets/shaders/G_Letter/: G_Letter.frag  G_Letter.vert
assets/shaders/Heart/: FullScreen.vert  heart.frag  heart.vert
assets/shaders/SmileFace/: Smile.frag  Smile.vert
assets/shaders/background/: background.frag
assets/shaders/ex04_varyings/: varying_color.frag
assets/shaders/ex06_multiple_attributes/: multiple_attributes.vert
assets/shaders/ex11_transformation/: tint.frag
assets/shaders/ex22_texture_sampling/: transform.vert
assets/shaders/ex32_textured_material/: light_array.frag
source/common/: application.hpp
source/common/ECS/: Bullet.cpp  Bullet.h  Component.cpp  Component.h  Egg.cpp  Egg.h  Entity.cpp  Entity.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h  RenderState.cpp  RenderState.h  Sampler.cpp  Sampler.h  Sound.cpp  Sound.h  System.cpp  System.h  Texture.cpp  Texture.h  (+3 more)
source/examples/: main.cpp  phase2_main.cpp
(+17 files in other folders)
